@@ -855,6 +855,8 @@ app doing the data requests, not a malicious bot)
 2.2.5:
 -Tweaks to mining calculator setups
 -Upgraded binance API to v3
+-Multi proxy support for API calls
+-Minor bug fixes / cleanup
 -------------------------------------------------------------------
 
 
